<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myfit.activities.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_social"
        android:name="com.example.myfit.activities.fragments.SocialFragment"
        android:label="@string/social"
        tools:layout="@layout/fragment_social" />
    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.myfit.activities.fragments.FriendsFragment"
        android:label="@string/friends"
        tools:layout="@layout/fragment_friends" />
    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.myfit.activities.fragments.GroupsFragment"
        android:label="@string/groups"
        tools:layout="@layout/fragment_groups" />


</navigation>