<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".activities.activities.LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="50dp"
            android:text="@string/login"
            android:textColor="@color/gray"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"
            android:background="@drawable/one_round_background"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <EditText
                android:id="@+id/et_email_activity_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/et_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@color/gray"
                android:autofillHints="" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <EditText
                    android:id="@+id/et_pass_activity_login"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/et_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/gray" />

                <ImageView
                    android:id="@+id/iv_show_pass_activity_login"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/eye_open" />

            </RelativeLayout>
            <TextView
                android:id="@+id/tv_pass_hint_activity_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="16dp"
                android:text="Password is not match"
                android:textColor="@color/red"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_forget_activity_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:gravity="end"
                android:text="@string/forget_password"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/btn_login_activity_login"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/purple_700"
                android:padding="16dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_don_t_have_an_account"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/tv_create_activity_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</layout>