<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.activities.SignUpActivity">

    <data>

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="50dp"
                android:text="@string/sign_up"
                android:textColor="@color/gray"
                android:textSize="50sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@drawable/one_round_background"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <EditText
                    android:id="@+id/et_full_name_activity_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/et_background"
                    android:hint="Full Name"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColorHint="@color/gray" />

                <EditText
                    android:id="@+id/et_email_activity_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/et_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColorHint="@color/gray" />

                <EditText
                    android:id="@+id/et_number_activity_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/et_background"
                    android:hint="Phone Number"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColorHint="@color/gray" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_pass_activity_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@drawable/et_background"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:textColorHint="@color/gray" />

                        <ImageView
                            android:id="@+id/iv_show_pass_activity_sign_up"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            android:src="@drawable/eye_open" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_pass_hint_activity_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="is too short"
                        android:textColor="@color/red"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_repass_activity_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@drawable/et_background"
                            android:hint="Confirm Password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:textColorHint="@color/gray" />

                        <ImageView
                            android:id="@+id/iv_show_repass_activity_sign_up"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            android:src="@drawable/eye_open" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_repass_hint_activity_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="Password is not match"
                        android:textColor="@color/red"
                        android:visibility="gone" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/rg_activity_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_mail_activity_sign_up"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="verify by mail"
                        android:textColor="@color/gray" />

                    <RadioButton
                        android:id="@+id/rb_phone_activity_sign_up"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="verify by SMS"
                        android:textColor="@color/gray" />
                </RadioGroup>


                <Button
                    android:id="@+id/btn_next_activity_sign_up"
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/light_gray"
                    android:enabled="true"
                    android:padding="16dp"
                    android:text="@string/next"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="I already have an account"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/tv_login_activity_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/login"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>